Fix : Armageddon mobile

--- a/src/styles/Armageddon.module.scss
+++ b/src/styles/Armageddon.module.scss
@@ -380,6 +380,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    gap: 10px;
     /* Optional: centers last element horizontally */
   }
 
